--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@ title: Home
         {{ site.description }}
     </p>
 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6773266203964671"
+     crossorigin="anonymous"></script>
 <!-- Featured
 ================================================== -->
 <section class="featured-posts">
