--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@ title: Home
 
 {% if page.url == "/" %}
     <p class="lead">
-        {{ site.description }}
+      
+		<div style="text-align: center;">
+		<img src="assets/images/logo.png" alt="Techedition" class="center">
+		</div>
+		{{ site.description }}
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6773266203964671"
      crossorigin="anonymous"></script>
 <!-- Featured
